# bapao

./: Cargo.toml  DOCUMENTATION.md  README.md  TODO  bapao.config.json
app/: Cargo.toml
app/src/: main.rs  shot_pic.rs
bapao_app_protocal/: Cargo.toml
bapao_app_protocal/src/: lib.rs
bapao_trans_protocal/: Cargo.toml
bapao_trans_protocal/src/: lib.rs  trans_content.rs  trans_unit.rs  utils.rs
bapao_trans_protocal/src/gitee/: mod.rs
bapao_trans_protocal/src/gitee/fetch/: create_file.rs  get_content.rs  http.rs  mod.rs  put_content.rs  utils.rs
bapao_trans_protocal/src/gitee/handler/: group_by_state.rs  mod.rs
docs/: README.md  api_reference.md  app_protocol_api.md  configuration.md  examples.md  index.md  main_application.md  transport_protocol_api.md
